--- a/meson.build
+++ b/meson.build
@@ -26,28 +26,8 @@ project('libva-v4l2-request', 'c',
 
 cc = meson.get_compiler('c')
 
-# has_header_symbol() does not support the 'required' keyword
-# until Meson 0.50. Meanwhile Debian Buster is still at 0.49.
-# This is why if statements are used here.
-
-# Check for new Request API macros
-if not cc.has_header_symbol('linux/media.h', 'MEDIA_IOC_REQUEST_ALLOC',
-			    include_directories : kernel_headers_inc)
-    error('Missing request API from Linux Kernel headers')
-endif
-if not cc.has_header_symbol('linux/videodev2.h', 'V4L2_CTRL_WHICH_REQUEST_VAL',
-			    include_directories : kernel_headers_inc)
-    error('Missing V4L2_CTRL_WHICH_REQUEST_VAL from Linux Kernel headers')
-endif
-
-# Check for format macros
-if not cc.has_header_symbol('linux/videodev2.h', 'V4L2_PIX_FMT_MPEG2_SLICE',
-			    include_directories : kernel_headers_inc)
-    error('Missing macro V4L2_PIX_FMT_MPEG2_SLICE from Linux Kernel headers')
-endif
-if not cc.has_header_symbol('linux/videodev2.h', 'V4L2_PIX_FMT_SUNXI_TILED_NV12',
-			    include_directories : kernel_headers_inc)
-    error('Missing macro V4L2_PIX_FMT_SUNXI_TILED_NV12 from Linux Kernel headers')
+if not (cc.get_define('LINUX_VERSION_MAJOR', prefix: '#include <linux/version.h>').to_int() >= 6)
+    error('Require at least Linux 6.0')
 endif
 
 libva_dep = dependency('libva', version : '>= 1.1.0')
