--- a/src/meson.build
+++ b/src/meson.build
@@ -21,23 +21,23 @@
 # SOFTWARE OR THE USE OR OTHER DEALINGS IN THE SOFTWARE.
 
 sources = [
-	'request.c',
-	'object_heap.c',
-	'config.c',
-	'surface.c',
-	'context.c',
-	'buffer.c',
-	'picture.c',
-	'subpicture.c',
-	'image.c',
-	'utils.c',
-	'video.c',
-	'media.c',
-	'v4l2.c',
-	'mpeg2.c',
-	'h264.c',
-	'vp8.c',
-	'vp9.c',
+	'request.cc',
+	'object_heap.cc',
+	'config.cc',
+	'surface.cc',
+	'context.cc',
+	'buffer.cc',
+	'picture.cc',
+	'subpicture.cc',
+	'image.cc',
+	'utils.cc',
+	'video.cc',
+	'media.cc',
+	'v4l2.cc',
+	'mpeg2.cc',
+	'h264.cc',
+	'vp8.cc',
+	'vp9.cc',
 ]
 
 headers = [
@@ -64,12 +64,13 @@ v4l2_request_drv_video = shared_module('v4l2_request_drv_video',
 	name_prefix: '',
 	install: true,
 	install_dir: join_paths(get_option('libdir'), 'dri'),
-	c_args: [
+	cpp_args: [
 		'-Wall',
 		'-fvisibility=hidden',
 		'-DVA_DRIVER_INIT_FUNC=' + va_driver_init_func,
 		'-D__STDC_WANT_LIB_EXT2__',
 		'-DGST_USE_UNSTABLE_API',
+		'-std=c++20',
 	],
 	sources: [ sources, headers ],
 	dependencies: [
