--- a/meson.build
+++ b/meson.build
@@ -32,10 +32,11 @@ endif
 
 libva_dep = dependency('libva', version : '>= 1.1.0')
 libdrm_dep = dependency('libdrm', version : '>= 2.4.52')
-libgstcodecparsers_dep = dependency('gstreamer-codecparsers-1.0', version : '>= 1.12')
+libgstcodecparsers_dep = dependency('gstreamer-codecparsers-1.0', version : '>= 1.12', required: false)
 libgstcodecs_dep = cc.find_library('gstcodecs-1.0',  # Present but not advertised via pkgconfig.
 	has_headers: ['gst/codecs/gstvp9statefulparser.h'],
 	header_dependencies: libgstcodecparsers_dep,
+        required: false,
 )
 
 va_api_version_array = libva_dep.version().split('.')
