--- a/meson.build
+++ b/meson.build
@@ -21,7 +21,7 @@
 # TORT OR OTHERWISE, ARISING FROM, OUT OF OR IN CONNECTION WITH THE
 # SOFTWARE OR THE USE OR OTHER DEALINGS IN THE SOFTWARE.
 
-project('libva-v4l2-request', 'cpp',
+project('libva-v4l2', 'cpp',
 	version: '1.0.0',
 	meson_version: '>= 0.56.0')
 
