Centralize format mapping

--- a/src/meson.build
+++ b/src/meson.build
@@ -30,7 +30,7 @@ sources = [
 	'subpicture.cc',
 	'image.cc',
 	'utils.cc',
-	'video.cc',
+	'format.cc',
 	'media.cc',
 	'v4l2.cc',
 	'mpeg2.cc',
@@ -48,7 +48,7 @@ headers = [
 	'subpicture.h',
 	'image.h',
 	'utils.h',
-	'video.h',
+	'format.h',
 	'media.h',
 	'v4l2.h',
 	'mpeg2.h',
